@@ -1,3 +1,9 @@
+Changes with version
+
+ *) Explicitly close the mmap'd temporary file instead of relying on
+    close-on-destruction
+
+
 Changes with version 243.0
 
  *) Update liblinear to 2.43
